# uECDC

./: .gitignore  LICENSE.md  README.md  auxiliary_functions.py  client_offline.py  client_online.py  client_preprocessed.pkl  cuckoo_hash.py  estimate_bincapacity.py  oprf.py  parameters.py  requirements.txt  server_offline.py  server_online.py  set_gen.py  simple_hash.py  test_data_creator.py  total_online.py  trans_machinelearning_dataset.py
datasets/: client_diabetes.csv  client_mnist.csv  intersection_diabetes.csv  intersection_mnist.csv  server_diabetes.csv  server_mnist.csv
rrokvs/: CMakeLists.txt  Paxos.h  PaxosImpl.h  rrokvs.cpp
